details/details.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: bookinfo
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 9081
    name: http
    targetPort: 9081
  selector:
    app: details
  type: ClusterIP
---
# Details v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  namespace: bookinfo
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: villanel/bookinfo-details:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9081
---
# Details v2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v2
  namespace: bookinfo
  labels:
    app: details
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v2
  template:
    metadata:
      labels:
        app: details
        version: v2
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: bookinfo/details:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9081
---
# Details version services
apiVersion: v1
kind: Service
metadata:
  name: details-v1
  namespace: bookinfo
spec:
  ports:
  - port: 9081
    name: http
  selector:
    app: details
    version: v1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: details-v2
  namespace: bookinfo
spec:
  ports:
  - port: 9081
    name: http
  selector:
    app: details
    version: v2
  type: ClusterIP
