details/details-pr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: details-pr-route
  namespace: bookinfo
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: details
    port: 9081
  rules:
  - matches:
    - headers:
      - type: RegularExpression
        name: "baggage"
        value: ".*pr_id=test_pr_id.*"
    backendRefs:
    - name: details-v2
      port: 9081
